--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,12 +44,17 @@ dependencies {
     implementation 'androidx.navigation:navigation-fragment-ktx:2.5.3'
     implementation 'androidx.navigation:navigation-ui-ktx:2.5.3'
     implementation 'com.google.android.material:material:1.9.0-alpha01'
-    implementation platform('com.google.firebase:firebase-bom:31.2.0')
+    implementation platform('com.google.firebase:firebase-bom:31.2.1')
     implementation 'com.google.firebase:firebase-analytics-ktx'
     implementation 'com.google.firebase:firebase-auth-ktx'
     implementation 'com.google.firebase:firebase-firestore-ktx'
 
-    implementation "io.noties.markwon:core:4.6.2"
+    implementation 'androidx.swiperefreshlayout:swiperefreshlayout:1.1.0'
+
+    final def  markwon_version =  '4.6.2'
+
+    implementation  "io.noties.markwon:core:$markwon_version"
+    implementation  "io.noties.markwon:image:$markwon_version"
 
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
