--- a/app/build.gradle
+++ b/app/build.gradle
@@ -50,11 +50,14 @@ dependencies {
     implementation 'com.google.firebase:firebase-firestore-ktx'
 
     implementation 'androidx.swiperefreshlayout:swiperefreshlayout:1.1.0'
+    implementation 'androidx.preference:preference:1.2.0'
 
     final def  markwon_version =  '4.6.2'
-
     implementation  "io.noties.markwon:core:$markwon_version"
     implementation  "io.noties.markwon:image:$markwon_version"
+
+    // The view calendar library https://github.com/kizitonwose
+    implementation 'com.kizitonwose.calendar:view:2.1.1'
 
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
